--- a/WebApplication2/Views/Home/Create.cshtml
+++ b/WebApplication2/Views/Home/Create.cshtml
@@ -17,12 +17,12 @@
             </div>
 
             <div class="mb-3 row">
-                <label asp-for="Description" class="form-label">Автор</label>
+                <label asp-for="Description" class="form-label">Описание</label>
                 <input type="text" class="form-control" asp-for="Description">
             </div>
 
             <div class="mb-3 row">
-                <label asp-for="Description_facts" class="form-label">Автор</label>
+                <label asp-for="Description_facts" class="form-label">Фактическое описание</label>
                 <input type="text" class="form-control" asp-for="Description_facts">
             </div>
 
