--- a/WebApplication2/Views/Home/SearchResults.cshtml
+++ b/WebApplication2/Views/Home/SearchResults.cshtml
@@ -1,35 +1,37 @@
 ﻿@model List<SearchResult>
 
-<h2>Search Results</h2>
-
+<h2>Результат поиска</h2>
 @if (Model.Any())
 {
-    <table>
-        <thead>
-        <tr>
-            <th>Название</th>
-            <th>Жанр</th>
-            <th>Автор</th>
-            <th>Подробнее</th>
-        </tr>
-        </thead>
-        <tbody>
-            @foreach (var result in Model)
-            {
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@result.Name</td>
-                    <td>@result.Tags</td>
-                    <td>@result.Auth</td>
-                    <td>                <a asp-action="BookDetail" asp-controller="Home" asp-route-id="@result.BookID" class="button">Подробнее</a>
-
-                        </td>
+                    <th scope="col">Название</th>
+                    <th scope="col">Жанр</th>
+                    <th scope="col">Автор</th>
+                    <th scope="col">Подробнее</th>
                 </tr>
-                
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var result in Model)
+                {
+                    <tr class="book-row" data-id="@result.BookID">
+                        <td>@result.Name</td>
+                        <td>@result.Tags</td>
+                        <td>@result.Auth</td>
+                        <td data-id="@result.BookID">
+                            <a href="@Url.Action("BookDetail", "Home", new { id = result.BookID })" class="btn btn-primary">Подробнее</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 }
 else
 {
     <p>No results found.</p>
 }
+
+
