--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -7,27 +7,22 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/WebApplication2.styles.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-t1EtOc8+/VVhOIF24bJ7E9XNS6J/x7s+yoR6Ug7ZmFwJdtMZ7+16qLcaxIYvX9zCy8/7gF75lCfTDZTBpJWwEw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Chat</title>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-t1EtOc8+/VVhOIF24bJ7E9XNS6J/x7s+yoR6Ug7ZmFwJdtMZ7+16qLcaxIYvX9zCy8/7gF75lCfTDZTBpJWwEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <div class="bg"></div>
+      <div class="bg bg2"></div>
+      <div class="bg bg3"></div>
+      
 </head>
 <body>
 <header>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
+     <div class="bg"></div>
+          <div class="bg bg2"></div>
+          <div class="bg bg3"></div>
+
 
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Книжный магазин "Убийца Стула"</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -42,11 +37,17 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">О нас</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="POCHTA">ПОЧТА</a>
+                    </li>
+                    
                     @if (!User.IsInRole("user") && !User.Identity.IsAuthenticated == false)
                     {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Админка</a>
-                        </li>
+                        
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Админка</a>
+                            </li>
+                        
                     }
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OrderList">ЛистЗаказов</a>
@@ -57,104 +58,108 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="rss">Новости</a>
                     </li>
-                    <li class="nav-item ms-auto">
-                        <form class="d-flex ms-1" asp-controller="Home" asp-action="Search" method="get">
+                    <li class="nav-item ml-auto">
+                        <form class="d-flex" asp-controller="Home" asp-action="Search" method="get">
                             <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search" name="searchString">
                             <button class="btn btn-outline-success" type="submit">Поиск</button>
                         </form>
                     </li>
+                    
+                    
+                    
+                    
 
 
                 </ul>
             </div>
         </div>
-        <div>
-            <ul class="navbar-nav flex-grow-1">
-                @if (User.Identity!.IsAuthenticated)
-                {
-                    <li class="nav-item" style="padding-top: 8px">Здравствуйте,@User.Identity.Name</li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
-                    </li>
-                }
-                else
-                {
-                    <!-- Кнопка-триггер модального окна -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
-                        Войти
-                    </button>
-                    <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#RegisterModal">
-                        Регистрация
-                    </button>
-                    <!-- Модальное окно -->
-                    <div class="modal fade" id="LoginModal" tabindex="0" aria-labelledby="LoginModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Вход</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                                </div>
-                                <div>
-                                    <button type="buttin" class="btn btn" data-bs-toggle="modal" data-bs-target="#RegisterModal">
-                                        Регистрация
-                                    </button>
-                                </div>
-                                @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-                                {
-                                    <div class="modal-body">
-                                        <div>
-                                            <label>Введите Email</label>
-                                            <input type="text" name="Email" id="Email"/>
-                                        </div>
-                                        <div>
-                                            <label >Введите Пароль</label>
-                                            <input type="password" name="Password" id="Password"/>
+         <div>
+                        <ul class="navbar-nav flex-grow-1">
+                            @if (User.Identity!.IsAuthenticated)
+                            {
+                                <li class="nav-item" style="padding-top: 8px">Здравствуйте,@User.Identity.Name</li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <!-- Кнопка-триггер модального окна -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
+                                    Войти
+                                </button>
+                                <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#RegisterModal">
+                                    Регистрация
+                                </button>
+                                <!-- Модальное окно -->
+                                <div class="modal fade" id="LoginModal" tabindex="0" aria-labelledby="LoginModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Вход</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                            </div>
+                                            <div>
+                                                <button type="buttin" class="btn btn" data-bs-toggle="modal" data-bs-target="#RegisterModal">
+                                                    Регистрация
+                                                </button>
+                                            </div>
+                                            @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                                            {
+                                                <div class="modal-body">
+                                                    <div>
+                                                        <label>Введите Email</label>
+                                                        <input type="text" name="Email" id="Email"/>
+                                                    </div>
+                                                    <div>
+                                                        <label >Введите Пароль</label>
+                                                        <input type="password" name="Password" id="Password"/>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <div>
+                                                        <input type="submit" value="Войти" class="btn btn-outline-dark"/>
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                                                    </div>
+                                                </div>
+                                            }
                                         </div>
                                     </div>
-                                    <div class="modal-footer">
-                                        <div>
-                                            <input type="submit" value="Войти" class="btn btn-outline-dark"/>
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                                </div>
+                                <div class="modal fade" id="RegisterModal" tabindex="0" aria-labelledby="RegisterModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Регистрация</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                            </div>
+                                            @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+                                            {
+                                                <div class="modal-body">
+                                                    <div>
+                                                        <label>Введите Email</label>
+                                                        <input type="text" name="Email" id="Email"/>
+                                                    </div>
+                                                    <div>
+                                                        <label >Введите Пароль</label>
+                                                        <input type="password" name="Password" id="Password"/>
+                                                    </div>
+                                                    
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <div>
+                                                        <input type="submit" value="Войти" class="btn btn-outline-dark"/>
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                                                    </div>
+                                                </div>
+                                            }
                                         </div>
                                     </div>
-                                }
-                            </div>
-                        </div>
+                                </div>
+                            }
+                        </ul>
                     </div>
-                    <div class="modal fade" id="RegisterModal" tabindex="0" aria-labelledby="RegisterModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Регистрация</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                                </div>
-                                @using (Html.BeginForm("Register", "Account", FormMethod.Post))
-                                {
-                                    <div class="modal-body">
-                                        <div>
-                                            <label>Введите Email</label>
-                                            <input type="text" name="Email" id="Email"/>
-                                        </div>
-                                        <div>
-                                            <label >Введите Пароль</label>
-                                            <input type="password" name="Password" id="Password"/>
-                                        </div>
-
-                                    </div>
-                                    <div class="modal-footer">
-                                        <div>
-                                            <input type="submit" value="Войти" class="btn btn-outline-dark"/>
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                                        </div>
-                                    </div>
-                                }
-                            </div>
-                        </div>
-                    </div>
-                }
-            </ul>
-        </div>
-
+        
     </nav>
 </header>
 <div class="container">
